unpackaged/main/default/objects/Contact/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Mister</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Miss</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Madame</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>