unpackaged/main/default/objects/Contact/fields/ToDelete__c.field-meta.xml
<CustomField>
    <fullName>ToDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Delete</label>
    <type>Checkbox</type>
</CustomField>