unpackaged/main/default/objects/Contact/fields/Tourist__c.field-meta.xml
<CustomField>
    <fullName>Tourist__c</fullName>
    <formula>IF( TEXT(Country__c) != TEXT(OriginStore__r.Country__c) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tourist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>