unpackaged/main/default/objects/Contact/fields/UCRInternalId__c.field-meta.xml
<CustomField>
    <fullName>UCRInternalId__c</fullName>
    <externalId>true</externalId>
    <label>UCR Internal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>