unpackaged/main/default/objects/Contact/fields/UCRLastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UCRLastUpdateDate__c</fullName>
    <label>UCR Last Update Date</label>
    <type>DateTime</type>
</CustomField>