unpackaged/main/default/objects/Contact/fields/UnionId__c.field-meta.xml
<CustomField>
    <fullName>UnionId__c</fullName>
    <label>UnionId</label>
    <length>35</length>
    <type>Text</type>
</CustomField>