unpackaged/main/default/objects/Contact/fields/ValidityAddress__c.field-meta.xml
<CustomField>
    <fullName>ValidityAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validity Address</label>
    <type>Checkbox</type>
</CustomField>