unpackaged/main/default/objects/Contact/fields/ValidityAllChannels__c.field-meta.xml
<CustomField>
    <fullName>ValidityAllChannels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validity All Channels</label>
    <type>Checkbox</type>
</CustomField>