unpackaged/main/default/objects/Contact/fields/ValidityEmail__c.field-meta.xml
<CustomField>
    <fullName>ValidityEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validity Email</label>
    <type>Checkbox</type>
</CustomField>