unpackaged/main/default/objects/Contact/fields/ValidityInstantMessaging__c.field-meta.xml
<CustomField>
    <fullName>ValidityInstantMessaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validity Instant Messaging</label>
    <type>Checkbox</type>
</CustomField>