unpackaged/main/default/objects/Contact/fields/ValidityPhone__c.field-meta.xml
<CustomField>
    <fullName>ValidityPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validity Phone</label>
    <type>Checkbox</type>
</CustomField>