unpackaged/main/default/objects/Contact/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <label>VIP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>