unpackaged/main/default/objects/Contact/fields/WebsiteCountry__c.field-meta.xml
<CustomField>
    <fullName>WebsiteCountry__c</fullName>
    <label>Website Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>