unpackaged/main/default/objects/Contact/fields/WebsiteLanguage__c.field-meta.xml
<CustomField>
    <fullName>WebsiteLanguage__c</fullName>
    <label>Website Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>