unpackaged/main/default/objects/Contact/fields/WebsiteLocale__c.field-meta.xml
<CustomField>
    <fullName>WebsiteLocale__c</fullName>
    <label>Website Locale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>