unpackaged/main/default/objects/Contact/fields/WeChat__c.field-meta.xml
<CustomField>
    <fullName>WeChat__c</fullName>
    <label>WeChat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>